# Rubik-Cube

./: CMakeLists.txt  CubeDLG.cpp  Dockerfile  LICENSE.txt  README.md  Shader.cpp  Shader.h  a.out  back.glslf  bottom.glslf  color.cpp  color.h  cube.cpp  cube.h  cubeDLG.cpp  cubeDLG.h  input.txt  left.glslf  left.glslv  main.cpp  main.glslf  main.glslv  output.txt  right.glslf  smallCube.cpp  smallCube.h  up.glslf
lib/: CMakeLists.txt
save/: input.txt
shaders/: back.glslf  inside.glslf
